# beerkeeper-rocket

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
migrations/2021-06-13-152518_create_users/: up.sql
migrations/2021-06-22-130445_create_events/: up.sql
migrations/2021-06-22-130530_create_participations/: down.sql  up.sql
src/: connection.rs  jwt.rs  main.rs  root.rs  schema.rs  secret.key
src/constants/: messages_constant.rs  mod.rs
src/handlers/: events_handler.rs  mod.rs  users_handler.rs  welcome_handler.rs
src/models/: event.rs  mod.rs  participantion.rs  user.rs
src/repositories/: users_repository.rs
src/routers/: events_router.rs  mod.rs  users_router.rs
src/services/: events_service.rs  mod.rs  participantions_service.rs  responses_services.rs  users_service.rs  welcome_service.rs
src/user/: handler.rs  model.rs  repository.rs  router.rs
