[package]
name = "beerkeeper-rocket"
version = "0.1.0"
authors = ["YutaGoto <you.goto.510@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_codegen = "0.4.10"
diesel = { version = "1.4.7", features = ["postgres"] }
dotenv = "0.15.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
rust-crypto = "0.2.36"
jsonwebtoken = "7.2.0"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
env_logger = "0.8.4"
log = "0.4.14"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
