[package]
name = "beerkeeper-rocket"
version = "0.1.0"
authors = ["YutaGoto <you.goto.510@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_codegen = "0.4.10"
rocket_cors = "0.5.0"
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
bcrypt = "0.10.1"
jsonwebtoken = "7.2.0"
serde = "1.0.136"
serde_derive = "1.0.126"
serde_json = "1.0.75"
log = "0.4.14"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["diesel_postgres_pool", "json"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]
